Fix: alignment, update header text

--- a/src/App.scss
+++ b/src/App.scss
@@ -1832,7 +1832,7 @@ body {
         .svg-tools::before {
           background: url("./svg/projects/project-tools--mobile.svg") no-repeat;
           background-size: contain;
-          height: 244px;
+          height: 243px;
           top: -248px;
           left: 0;
           z-index: -2;
